--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,8 +18,11 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
-    <p>já me livrei da maldição!!</p>   
+    <p>já me livrei da maldição!!</p>
     <script>
+        //comentário em um única linha
+        /*comentário mais de uma linha
+        de cógido*/  
         window.alert('Minha primeira mensagem!')
         window.confirm('Está gostando de JS?')
         window.prompt('Qual é o seu nome?')
